# scarf.db

./: Cargo.toml  README.md
scarf/: Cargo.toml
scarf/src/: database.rs  document.rs  error.rs  lib.rs
scarf_macros/: Cargo.toml
